--- a/B3/index.html
+++ b/B3/index.html
@@ -3,7 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <style>
+      html {
+        background-color: #ccc;
+      }
+      div + p {
+        background-color: orange;
+      }
+    </style>
+    <p>Nội dung 1</p>
+    <div>
+      <p>Nội dung 2</p>
+      <p>Nội dung 3</p>
+
+      <section>
+        <p>Nội dung section 1</p>
+        <p>Nội dung section 2</p>
+
+        <article>
+          <p>Nội dung article 1</p>
+          <p>Nội dung article 2</p>
+        </article>
+      </section>
+    </div>
+    <p>Nội dung 4</p>
+    <h2>Nội dung thẻ h2</h2>
+    <p>Nội dung 5</p>
+    <p>Nội dung 6</p>
+  </body>
 </html>
