--- a/B9/index.html
+++ b/B9/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
-  <body>
-    <script>
-      console.log("Hello World!");
-    </script>
+  <body class="">
+    <h2>Hello, World!</h2>
+    <button id="change-mode">Change mode</button>
+    <script src="main.js"></script>
   </body>
 </html>
